Inserido descrição detalhada de cada planeta

--- a/sistemaSolar_v3.html
+++ b/sistemaSolar_v3.html
@@ -26,16 +26,17 @@
     //variáveis globais
     let scene, camera, renderer, controls, clock;
     const planetas = [
-    {nome: 'Sol', descricao: 'O Sol é a estrela mais quente do sistema solar.', distancia: 0, velocidade: 0, tamanho: 50, textura: 'images/sol_texture.jpg', rotacao: 0.01},
-    {nome: 'Mercúrio', descricao: 'Mercúrio é o planeta mais próximo do Sol.', distancia: 1.3, velocidade: 47.87, tamanho: 8, textura: 'images/mercury_texture.jpg', rotacao: 0.004},
-    {nome: 'Vênus', descricao: 'Vênus é o planeta com a rotação mais lenta do sistema solar.', distancia: 3, velocidade: 35.02, tamanho: 12, textura: 'images/venus_texture.jpg', rotacao: 0.002},
-    {nome: 'Terra', descricao: 'A Terra é o único planeta conhecido com vida.', distancia: 5, velocidade: 29.78, tamanho: 12, textura: 'images/earth_texture.jpg', rotacao: 0.01},
-    {nome: 'Marte', descricao: 'Marte é conhecido como o "Planeta Vermelho".', distancia: 7.3, velocidade: 24.07, tamanho: 9, textura: 'images/mars_texture.jpg', rotacao: 0.008},
-    {nome: 'Júpiter', descricao: 'Júpiter é o maior planeta do sistema solar.', distancia: 10, velocidade: 13.07, tamanho: 20, textura: 'images/jupiter_texture.jpg', rotacao: 0.02},
-    {nome: 'Saturno', descricao: 'Saturno é conhecido pelos seus impressionantes anéis.', distancia: 13.7, velocidade: 9.69, tamanho: 17, textura: 'images/saturno_texture.jpg', rotacao: 0.018},
-    {nome: 'Urano', descricao: 'Urano é o único planeta que gira de lado.', distancia: 17.3, velocidade: 6.81, tamanho: 13, textura: 'images/urano_texture.jpg', rotacao: 0.016},
-    {nome: 'Netuno', descricao: 'Netuno é o planeta mais distante do Sol.', distancia: 20.3, velocidade: 5.43, tamanho: 13, textura: 'images/netuno_texture.jpg', rotacao: 0.015},
+    {nome: 'Sol', descricao: 'O Sol é uma estrela de tipo espectral G2V e é a principal fonte de energia do sistema solar. Sua temperatura na superfície é de cerca de 5.500°C e no núcleo atinge 15 milhões de graus Celsius. Ele representa 99,86% da massa total do sistema solar.', distancia: 0, velocidade: 0, tamanho: 50, textura: 'images/sol_texture.jpg', rotacao: 0.01},
+    {nome: 'Mercúrio', descricao: 'Mercúrio é o planeta mais próximo do Sol. Com um raio de 2.439,7 km, é o menor planeta do sistema solar. Sua temperatura varia de -180°C à noite a 430°C durante o dia, devido à falta de atmosfera significativa para reter calor.', distancia: 1.3, velocidade: 47.87, tamanho: 8, textura: 'images/mercury_texture.jpg', rotacao: 0.004},
+    {nome: 'Vênus', descricao: 'Vênus é o planeta com a rotação mais lenta do sistema solar, levando 243 dias terrestres para completar uma rotação. Sua atmosfera é composta principalmente por dióxido de carbono, criando um efeito estufa que faz sua temperatura média ultrapassar 470°C.', distancia: 3, velocidade: 35.02, tamanho: 12, textura: 'images/venus_texture.jpg', rotacao: 0.002},
+    {nome: 'Terra', descricao: 'A Terra é o único planeta conhecido a abrigar vida. Com uma atmosfera rica em oxigênio e água em estado líquido, ela possui um raio de 6.371 km e uma temperatura média de 14°C. Seu ciclo de rotação dura 23,93 horas, e um ano tem 365,25 dias.', distancia: 5, velocidade: 29.78, tamanho: 12, textura: 'images/earth_texture.jpg', rotacao: 0.01},
+    {nome: 'Marte', descricao: 'Marte é conhecido como o "Planeta Vermelho" devido à sua superfície rica em óxido de ferro. Com um raio de 3.396,2 km, sua atmosfera é muito fina e composta principalmente de dióxido de carbono. Seu dia é apenas 40 minutos mais longo que o da Terra.', distancia: 7.3, velocidade: 24.07, tamanho: 9, textura: 'images/mars_texture.jpg', rotacao: 0.008},
+    {nome: 'Júpiter', descricao: 'Júpiter é o maior planeta do sistema solar, com um raio de 69.911 km. Sua atmosfera é composta principalmente por hidrogênio e hélio. Júpiter é conhecido pela Grande Mancha Vermelha, uma tempestade que ocorre há mais de 400 anos.', distancia: 10, velocidade: 13.07, tamanho: 20, textura: 'images/jupiter_texture.jpg', rotacao: 0.02},
+    {nome: 'Saturno', descricao: 'Saturno é o segundo maior planeta do sistema solar, com anéis formados principalmente por partículas de gelo e rochas. Ele tem uma rotação rápida, com um período de 10,7 horas, e sua distância média do Sol é de 1,43 bilhões de km.', distancia: 13.7, velocidade: 9.69, tamanho: 17, textura: 'images/saturno_texture.jpg', rotacao: 0.018},
+    {nome: 'Urano', descricao: 'Urano é o único planeta que gira de lado, com um eixo de rotação inclinado a 98 graus em relação ao plano de sua órbita. Ele possui uma atmosfera composta principalmente por hidrogênio, hélio e metano, o que lhe confere uma cor azulada.', distancia: 17.3, velocidade: 6.81, tamanho: 13, textura: 'images/urano_texture.jpg', rotacao: 0.016},
+    {nome: 'Netuno', descricao: 'Netuno é o planeta mais distante do Sol. Sua atmosfera é composta principalmente de hidrogênio, hélio e metano, e ele é conhecido pelos ventos mais rápidos do sistema solar, que podem atingir até 2.100 km/h. Netuno tem 14 luas conhecidas.', distancia: 20.3, velocidade: 5.43, tamanho: 13, textura: 'images/netuno_texture.jpg', rotacao: 0.015},
 ];
+
     const planetasMeshes = [];
     let luaMesh = null; //variável para armazenar a Lua
 
